fix: Hide overflow-x and set min width to body

--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
+    min-width: 100%;
     --dark-background: #1F2937;
     --empty-container-size: 30%;
 }
@@ -142,7 +144,7 @@ s1-bottom-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* padding: 100px; */
+    flex-basis: 300px;
 }
 
 .s1-img img {
